# django-event-store

./: .gitignore  LICENSE  README.md  broker.py  client.py  event.py  manage.py  pyproject.toml  record.py  specification.py  specification_reader.py  subscriptions.py  test_subscriptions.py
django_event_store/: admin.py  after_commit_celery_dispatcher.py  apps.py  client.py  event_repository.py  event_repository_reader.py  models.py
django_event_store/migrations/: 0001_initial.py
event_store/: __init__.py  batch_enumerator.py  broker.py  celery_scheduler.py  celery_task.py  client.py  composed_dispatcher.py  dispatcher.py  event.py  event_type_resolver.py  exceptions.py  expected_version.py  immediate_celery_dispatcher.py  in_memory_repository.py  metadata.py  record.py  repository.py  serialized_record.py  specification.py  specification_reader.py  stream.py  subscriptions.py
event_store/mappers/: default.py  empty_mapper.py  pipeline.py  pipeline_mapper.py
event_store/mappers/transformations/: domain_event.py  event_class_remapper.py  symbolize_metadata_keys.py
event_store/serializers/: __init__.py  yaml.py
event_store/tests/: conftest.py  test_client.py  test_event.py  test_in_memory_repository.py  test_specification.py  test_subscriptions.py
mappers/: default.py  empty_mapper.py  pipeline.py  pipeline_mapper.py
mappers/transformations/: domain_event.py  event_class_remapper.py  symbolize_metadata_keys.py
support/helpers/: __init__.py  time_enrichment.py
tests/: conftest.py  test_client.py  test_event.py  test_in_memory_repository.py  test_mappers.py  test_specification.py  test_subscriptions.py
tests/django/: django_settings.py  test_events.py  test_repository.py
tests/event_store/: conftest.py  test_batch_enumerator.py  test_client.py  test_event.py  test_event_type_resolver.py  test_in_memory_repository.py  test_mappers.py  test_metadata.py  test_record.py  test_serialized_record.py  test_specification.py  test_subscriptions.py
