[tool.poetry]
name = "django-event-store"
packages = [ { include = "./django_event_store" }, { include = "event_store" } ]
version = "0.1.0"
description = "Python event store"
authors = ["Michał Godkowicz <michal.godkowicz@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
coverage = "^6.0.2"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
ignore_missing_imports = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django.django_settings"
