[tool.poetry]
name = "django-event-store"
packages = [ { include = "./django_event_store" }, { include = "event_store" } ]
version = "0.1.0"
description = "Python event store"
authors = ["Michał Godkowicz <michal.godkowicz@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
pyyaml = "^6.0.1"
frozendict = "^2.3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.4.1"
isort = "^5.12.0"
coverage = "^7.2.7"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
celery = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
ignore_missing_imports = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django.django_settings"
